src/test/ui/issues/issue-43162.stderr
error[E0268]: `break` outside of loop
  --> $DIR/issue-43162.rs:3:5
   |
LL |     break true;
   |     ^^^^^^^^^^ cannot break outside of a loop

error[E0268]: `break` outside of loop
  --> $DIR/issue-43162.rs:7:5
   |
LL |     break {};
   |     ^^^^^^^^ cannot break outside of a loop

error[E0308]: mismatched types
  --> $DIR/issue-43162.rs:1:13
   |
LL | fn foo() -> bool {
   |    ---      ^^^^ expected bool, found ()
   |    |
   |    this function's body doesn't return
LL |
LL |     break true;
   |               - help: consider removing this semicolon
   |
   = note: expected type `bool`
              found type `()`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0268, E0308.
For more information about an error, try `rustc --explain E0268`.
